cogl (1.22.2-1) UNRELEASED; urgency=medium

  [ Jeremy Bicha ]
  * Have libcogl-dev depend on libcairo2-dev

  [ Michael Biebl ]
  * New upstream release.
  * Drop 0001-kms-winsys-don-t-wait-for-a-flip-when-page-flipping-.patch,
    merged upstream.
  * Convert from cdbs to dh.

 -- Jeremy Bicha <jbicha@ubuntu.com>  Wed, 06 Jul 2016 01:10:21 -0400

cogl (1.22.0-2) unstable; urgency=medium

  * Fix black screen after logout. Patch cherry-picked from upstream Git.
    (Closes: #805763)
  * Set pkg-gnome-maintainers@lists.alioth.debian.org as Maintainer and move
    Rico Tzschichholz to Uploaders.
  * Bump debhelper compatibility level to 9.
  * Install .typelib files into multiarch paths and mark the gir packages as
    Multi-Arch: same.
  * Bump Standards-Version to 3.9.6.

 -- Michael Biebl <biebl@debian.org>  Sun, 10 Jan 2016 00:20:18 +0100

cogl (1.22.0-1) unstable; urgency=medium

  * New upstream release.

 -- Andreas Henriksson <andreas@fatal.se>  Fri, 18 Sep 2015 09:34:15 +0200

cogl (1.21.2-1) experimental; urgency=medium

  * New upstream development release.
  * Update cogl symbols with one addition.

 -- Andreas Henriksson <andreas@fatal.se>  Sat, 29 Aug 2015 10:41:00 +0200

cogl (1.20.0-2) unstable; urgency=medium

  * Upload to unstable.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Sat, 23 May 2015 19:42:54 +0200

cogl (1.20.0-1) experimental; urgency=medium

  * New upstream release
  * Build packages for cogl-gst (gir1.2-coglgst-2.0,
    libcogl-gst20, libcogl-gst-dev)

 -- Sjoerd Simons <sjoerd@debian.org>  Mon, 04 May 2015 12:41:13 +0200

cogl (1.18.2-3) unstable; urgency=medium

  * Team upload.
  * libcogl20 Breaks libcogl9, libcogl11, libcogl12, libcogl15
    to hint wheezy's apt into doing the right thing on upgrades
    (Closes: #761047)

 -- Simon McVittie <smcv@debian.org>  Thu, 06 Nov 2014 14:51:16 +0000

cogl (1.18.2-2) unstable; urgency=medium

  [ Andreas Henriksson ]
  * Apply the remaining bits of Samuels Hurd/gles patch to